--- a/modules/localdev/templates/InstallConfigRecord.xml.erb
+++ b/modules/localdev/templates/InstallConfigRecord.xml.erb
@@ -7,7 +7,7 @@
 </com.jboss.devstudio.core.installer.PathInputPanel>
 <com.jboss.devstudio.core.installer.JREPathPanel id="jre"/>
 <com.jboss.devstudio.core.installer.JBossAsSelectPanel id="as">
-<installgroup>jbosseap</installgroup>
+<installgroup>jbds</installgroup>
 </com.jboss.devstudio.core.installer.JBossAsSelectPanel>
 <com.jboss.devstudio.core.installer.InstallAdditionalFeaturesPanel id="features">
 <ius>com.jboss.devstudio.core.package,org.testng.eclipse.feature.group</ius>
