Increasing loops for server start since CPRM was going almost to the max.

--- a/modules/gsajboss/templates/instance/instance_conf.sh.erb
+++ b/modules/gsajboss/templates/instance/instance_conf.sh.erb
@@ -22,8 +22,8 @@ JBOSS_INSTANCE_LOGDIR="/logs/jboss/<%= @name %>"
 #APP_CONFIG_DIR="/appconfig/jboss/<%= @name %>"
 #COMMON_STANDARDCONFIG_DIR="/opt/sw/jboss/gsaconfig/standardconfig/latest"
 
-#START_LOOP_TIMEOUT="10"
-#START_LOOP_TRYS="18"
+START_LOOP_TIMEOUT="5"
+START_LOOP_TRYS="20"
 #
 # Clean out and copy deployments and lib directory on startup. Default is no.
 #
