--- a/modules/gsajboss/templates/instance/instance_conf.sh.erb
+++ b/modules/gsajboss/templates/instance/instance_conf.sh.erb
@@ -12,14 +12,18 @@
 # used for sending email in sudo script.  HOSTNAME should probably not be overwritten
 #
 # If instance is using something other than standard hostname to start, override here.
+<% if @local == true -%>
 FULL_HOSTNAME=localhost
+<% else -%>
+# FULL_HOSTNAME=localhost
+<% end -%>
 
 JBOSS_TOP="/opt/sw/jboss"
-INSTANCE="<%= @name %>"
+INSTANCE="<%= @instance %>"
 JBOSS_HOME="/opt/sw/jboss/jboss/jboss-eap-6.4"
 JAVA_HOME="/opt/sw/jboss/java/jre1.8.0_71"
-JBOSS_INSTANCE_LOGDIR="/logs/jboss/<%= @name %>"
-#APP_CONFIG_DIR="/appconfig/jboss/<%= @name %>"
+JBOSS_INSTANCE_LOGDIR="/logs/jboss/<%= @instance %>"
+#APP_CONFIG_DIR="/appconfig/jboss/<%= @instance %>"
 #COMMON_STANDARDCONFIG_DIR="/opt/sw/jboss/gsaconfig/standardconfig/latest"
 
 START_LOOP_TIMEOUT="5"
