CM - Initial Commit. JBoss 6.4 instance installation on the assist box thus far.

--- a/modules/gsajboss6/templates/instance/instance_conf.sh.erb
+++ b/modules/gsajboss6/templates/instance/instance_conf.sh.erb
@@ -21,7 +21,7 @@ FULL_HOSTNAME=localhost
 JBOSS_TOP="/opt/sw/jboss"
 INSTANCE="<%= @instance %>"
 JBOSS_HOME="/opt/sw/jboss/jboss/jboss-eap-6.4"
-JAVA_HOME="/opt/sw/jboss/java/jre1.8.0_71"
+JAVA_HOME="/opt/sw/jboss/java/jdk1.8.0_131"
 JBOSS_INSTANCE_LOGDIR="/logs/jboss/<%= @instance %>"
 #APP_CONFIG_DIR="/appconfig/jboss/<%= @instance %>"
 #COMMON_STANDARDCONFIG_DIR="/opt/sw/jboss/gsaconfig/standardconfig/latest"
